# ais-princess

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.beads/: issues.jsonl
capture/: ais-catcher.py  rtl-ais.py
dac-fid-decoder/: .gitignore  README.md  pyproject.toml
dac-fid-decoder/examples/: decode_binary.py
dac-fid-decoder/src/ais_binary/: __init__.py  bitreader.py  dac001.py  dac200.py  dac367.py
dac-fid-decoder/tests/: __init__.py  test_decoders.py
db/: decoder.py  migrate.py  sync_ports.py
docs/: go-rewrite-plan.md
tools/: __init__.py  tmux_runner.py
web/: main.py
web/static/: app.js  index.html  state.js  style.css
