[project]
name = "ais-princess"
version = "0.1.0"
description = "AIS receiver and visualization system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiosqlite",
    "pyais",
    "libtmux",
]

[project.scripts]
ais-tmux = "tools.tmux_runner:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
