[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ais-princess"
version = "0.1.0"
description = "AIS binary message decoder for pyais"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Luke Burton" }
]
keywords = ["ais", "maritime", "nmea", "decoder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pyais>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/hagmonk/ais-princess"
Repository = "https://github.com/hagmonk/ais-princess"

[tool.hatch.build.targets.wheel]
packages = ["src/ais_binary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
